--- a/templates/predict.html
+++ b/templates/predict.html
@@ -55,7 +55,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="./backend.html">Model</a>
+              <a class="nav-item nav-link" href="/backend">Model</a>
               <a class="nav-item nav-link" href="./Datasets.html"
                 >About Datasets</a
               >
