--- a/templates/predict.html
+++ b/templates/predict.html
@@ -41,7 +41,7 @@
           class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
           style="min-height: 70px"
         >
-          <a class="navbar-brand" href="./predict.html">Home</a>
+          <a class="navbar-brand" href="predict">Home</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -56,7 +56,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="/backend">Model</a>
-              <a class="nav-item nav-link" href="./Datasets.html"
+              <a class="nav-item nav-link" href="Datasets"
                 >About Datasets</a
               >
             </div>
