--- a/templates/backend.html
+++ b/templates/backend.html
@@ -7684,7 +7684,7 @@ all of MD as it is not optimized for dense, information rich UIs.
         class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
         style="min-height: 70px"
       >
-        <a class="navbar-brand" href="./predict.html">Home</a>
+        <a class="navbar-brand" href="predict">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -7698,8 +7698,8 @@ all of MD as it is not optimized for dense, information rich UIs.
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="./backend.html">Model</a>
-            <a class="nav-item nav-link" href="./Datasets.html"
+            <a class="nav-item nav-link" href="backend">Model</a>
+            <a class="nav-item nav-link" href="Datasets"
               >About Datasets</a
             >
           </div>
