--- a/templates/predict.html
+++ b/templates/predict.html
@@ -41,7 +41,7 @@
           class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
           style="min-height: 70px"
         >
-          <a class="navbar-brand" href="predict">Home</a>
+          <a class="navbar-brand" href="/">Home</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -56,7 +56,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="/backend">Model</a>
-              <a class="nav-item nav-link" href="Datasets"
+              <a class="nav-item nav-link" href="/Datasets"
                 >About Datasets</a
               >
             </div>
@@ -112,6 +112,7 @@
               <option value="Student">Student</option>
               <option value="Employee">Employee</option>
               <option value="Housewife">Housewife</option>
+              <option value="Self Employeed">Self Employeed</option>
             </select>
           </div>
 
