--- a/templates/result.html
+++ b/templates/result.html
@@ -21,7 +21,7 @@
           class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
           style="min-height: 70px"
         >
-          <a class="navbar-brand" href="predict">Home</a>
+          <a class="navbar-brand" href="/">Home</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,8 +35,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="backend">Model</a>
-              <a class="nav-item nav-link" href="Datasets"
+              <a class="nav-item nav-link" href="/backend">Model</a>
+              <a class="nav-item nav-link" href="/Datasets"
                 >About Datasets</a
               >
             </div>
@@ -48,8 +48,13 @@
         <div class="row">
           <div class="col-md-6">
             <p class="mt-3">
-              The predicted class is:
+              The predicted Feedback is:
               <span class="font-weight-bold">{{ prediction }}</span>
+            </p>
+            
+            <p class="mt-3">
+              
+              <span >{{ feed }}</span>
             </p>
           </div>
         </div>
